# openclaw-agent-factory

./: README.md  README_OPENCLAW.md  pyproject.toml
agents/: aws.yaml  catalog.yaml  coordinator-openclaw-gold.yaml  coordinator-openclaw-slack.yaml  coordinator.yaml  docker-openclaw-gold.yaml  docker-openclaw-tools.yaml  docker-openclaw.yaml  docker.yaml  home-assistant-openclaw-gold.yaml  home-assistant-openclaw-tools.yaml  home-assistant.yaml
docs/: OPENCLAW_RECOMMENDED_PATH.md  OPENCLAW_REFOCUS.md  OPENCLAW_WORKSPACE_QUICKSTART.md  QUICKSTART.md  QUICKSTART_HARDENED.md  SLACK_COORDINATION_DESIGN.md
factory/: cli.py  cli_generate_all.py  generator.py  generator_docaware.py  model.py  openclaw_workspace_builder.py  render.py
ingest/: build_chroma.py  build_chroma_persistent.py  chunk_markdown.py  clone_repo.py  crawl_docs.py  embed_docs.py  fetch_docs.py  parse_markdown.py  run_ingest.py  update_collections.py  update_collections_persistent.py
ingest/configs/: aws.yaml  docker.yaml  home-assistant.yaml
memory/: case_store.py  learn.py  retrieve_cases.py
orchestrator/: ask.py  ask_memory.py  ask_memory_hardened.py  ask_reasoning.py  orchestrator.py  router_better.py  router_simple.py  troubleshooter.py  troubleshooter_docker_plus.py
templates/archetypes/: infra.yaml  media.yaml  smart-home.yaml
templates/base/: AGENTS.md.j2  Dockerfile.j2  IDENTITY.md.j2  SOUL.md.j2  TOOLS.md.j2  TOOLS_DOC_AWARE.md.j2
templates/base/scripts/: docker-triage-report.sh.j2  ha-config-audit.sh.j2
tools/: search_docs.py  search_docs_persistent.py
(+7 files in other folders)
