[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-agent-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
  "Jinja2",
  "chromadb"
]

[tool.setuptools]
packages = ["factory"]

[project.scripts]
openclaw-agent-factory = "factory.cli:main"
